[package]
name = "ActixWebTaskService"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
uuid = {version = "1.18.0", features = ["v4"]}
serde = {version = "1.0.219", features = ["derive"]}
aws-config = "^0.8"
aws-sdk-dynamodb = "^0.8"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = {version = "^0.24", features = ["derive"]}
derive_more = "^0.99"